syntax = "proto3";

package config.v1;

option go_package = "erp.localhost/internal/config/proto/config/v1;configv1";

import "google/protobuf/struct.proto";

message ConfigRequest {
    string tenant_id = 1;
    string user_id = 2;
    string module = 3;
}

message ConfigResponse {
    google.protobuf.Struct data = 1;
}

message EnvRequest {

}

message EnvResponse {

}

message FeatureFlagRequest {

}

message FeatureFlagResponse {
    
}

service ConfigService {
    rpc GetConfig(ConfigRequest) returns (ConfigResponse);
    rpc GetEnv(EnvRequest) returns (EnvResponse);
    rpc SetFeatureFlag(FeatureFlagRequest) returns (FeatureFlagResponse);
}